[gd_scene load_steps=7 format=3 uid="uid://7x4phocb0irq"]

[ext_resource type="PackedScene" uid="uid://bvpbyrm3splak" path="res://blender projects/scourge models/teeth.blend" id="1_usnu8"]
[ext_resource type="Script" uid="uid://jfdvnmw73e73" path="res://background/bullet/teeth.gd" id="2_6bw5t"]
[ext_resource type="Texture2D" uid="uid://mg2m8nvjviyx" path="res://images/bullets/teeth_particle.png" id="3_f3i2u"]

[sub_resource type="Curve" id="Curve_gcybf"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.450704), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_of2e4"]
colors = PackedColorArray(0.9, 0.8655, 0.81, 1, 0.898039, 0.815686, 0.682353, 0.247059)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u7ncs"]
radius = 4.88
height = 37.76

[node name="teeth" instance=ExtResource("1_usnu8")]
script = ExtResource("2_6bw5t")

[node name="Cone" parent="." index="0"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
layers = 2

[node name="CPUParticles2D" type="CPUParticles2D" parent="." index="1"]
texture = ExtResource("3_f3i2u")
lifetime = 0.5
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 1)
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_curve = SubResource("Curve_gcybf")
color_ramp = SubResource("Gradient_of2e4")

[node name="Area2D" type="Area2D" parent="." index="2"]
visibility_layer = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("CapsuleShape2D_u7ncs")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="." index="3"]
layers = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
